set up basic layout and some basic styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,115 @@
 
-.wrapper {
-  color: #311432;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+* {
+  padding:0;
+  margin: 0;
 }
 
+.wrapper {
+  color: #311432; 
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+}
 .menu-container {
   background-color: #fff;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
 }
 
-.sidebar-container {
-  background-color: #F5F5F5;
-  height: 100vh;
+header {
+  text-align: center;
+  padding: 3rem;
+  letter-spacing: 0.75px;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .food-img {
-  width: 55px;
-  height: 55px;
+  max-width: 250px;
+  height: 250px;
+  border-radius: 50px;
+  filter: drop-shadow(4px 10px 4px #cacaca);
+  margin-bottom: 0.75rem;
+}
+
+.food-item {
+  letter-spacing: 0.75px;
+  max-width: 250px;
+}
+
+.item-btn {
+  background: none;
+  border: none;
+}
+
+.sidebar-container {
+  display: none;
+}
+
+@media (min-width: 760px) {
+  
+  * {
+  overflow: hidden;
+  }
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: 3fr 1fr; 
+  }
+
+  .menu-container {
+    height: 100vh;
+  }
+
+  header {
+    text-align: center;
+    letter-spacing: 0.75px;
+  }
+
+  section {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .food-img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50px;
+    filter: drop-shadow(4px 10px 4px #cacaca);
+    margin-bottom: 0.75rem;
+  }
+
+  .food-item {
+    letter-spacing: 0.75px;
+    max-width: 250px;
+    margin-left: 1rem;
+  }
+
+  .item-btn {
+    background: none;
+    border: none;
+  }
+
+  .sidebar-container {
+    background-color: #F5F5F5;
+    height: 100vh;
+    display: block;
+  }
+
+}
+
+@media(min-width:1025px){
+
+  section {
+    margin-top: 3rem;
+  }
+
 }
