--- a/src/App.css
+++ b/src/App.css
@@ -8,33 +8,82 @@
   color: #311432; 
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-}
 .menu-container {
   background-color: #fff;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;  
+  align-items: center;
 }
 
 header {
   text-align: center;
-  padding: 3rem;
+  padding: 3rem 1rem 2rem 1rem;
   letter-spacing: 0.75px;
+  border-bottom: 1px solid grey;
+  margin-bottom: 2rem;
 }
+
+header p {
+ width: 90%;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 0.75rem;
+}
+
+.icon-div-menu,
+.icon-div-sidebar {
+  justify-content: flex-end;
+  position: absolute;
+  right: 0;
+}
+
+.icon-div-menu {
+  top: 0;
+  padding-top: 3rem;
+  padding-right: 1.75rem;
+  z-index: 1;
+}
+
+.icon,
+.icon-sidebar {
+  height: 25px;
+  width: 25px;
+  margin-left: 0.5rem;
+  cursor: pointer;
+}
+
+.sidebar-name {
+  margin-right: 2rem;
+}
+
 
 section {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  text-align: center;
+}
+
+.section-text {
+  text-align: left;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.section-price {
+  margin-top: 0.3rem;
 }
 
 .food-img {
-  max-width: 250px;
-  height: 250px;
+  max-width: 200px;
+  height: 200px;
   border-radius: 50px;
   filter: drop-shadow(4px 10px 4px #cacaca);
   margin-bottom: 0.75rem;
@@ -42,7 +91,8 @@ section {
 
 .food-item {
   letter-spacing: 0.75px;
-  max-width: 250px;
+  max-width: 200px;
+  margin-bottom: 3rem;
 }
 
 .item-btn {
@@ -50,14 +100,29 @@ section {
   border: none;
 }
 
+.sidebar-img {
+  max-width: 100px;
+  height: 100px;
+}
+
 .sidebar-container {
   display: none;
 }
 
-@media (min-width: 760px) {
+/* PREVIOUS ORDERS */
+
+.previous-order {
+
   
+  background-color: black;
+
+}
+
+
+@media (min-width: 760px) {
+
   * {
-  overflow: hidden;
+  
   }
 
   .wrapper {
@@ -69,9 +134,16 @@ section {
     height: 100vh;
   }
 
+  nav {
+    margin-bottom: 0.5rem;
+  }
+
   header {
     text-align: center;
     letter-spacing: 0.75px;
+    border: none;
+    margin-bottom: 0;
+    padding: 3rem 3rem 2rem 3rem;;
   }
 
   section {
@@ -80,18 +152,19 @@ section {
   }
 
   .food-img {
-    width: 200px;
-    height: 200px;
+    max-width: 225px;
+    height: 225px;
     border-radius: 50px;
     filter: drop-shadow(4px 10px 4px #cacaca);
     margin-bottom: 0.75rem;
   }
 
   .food-item {
-    letter-spacing: 0.75px;
-    max-width: 250px;
-    margin-left: 1rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    max-width: 225px;
   }
+ 
 
   .item-btn {
     background: none;
@@ -100,16 +173,42 @@ section {
 
   .sidebar-container {
     background-color: #F5F5F5;
-    height: 100vh;
+    
     display: block;
+   
   }
 
 }
 
-@media(min-width:1025px){
+@media(min-width:1060px){
+
+  header {
+    padding: 3rem;
+    
+  }
 
   section {
     margin-top: 3rem;
+  
   }
+
+}
+
+@media(max-width:1050px) and (min-width:750px){
+
+  header {
+    padding: 2rem;
+  }
+
+  .food-img {
+    max-width: 200px;
+    height: 200px;
+  }
+
+  .food-item {
+    max-width: 200px;
+  }
+
+
 
 }
